--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favic'use strict'
+
+    /**
+     * 검색창 제어
+     */
+    // 검색창 요소(.search) 찾기.
+    const searchEl = document.querySelector('.search')
+    const searchInputEl = searchEl.querySelector('input')
+    // 검색창 요소를 클릭하면 실행.
+    searchEl.addEventListener('click', function () {
+      searchInputEl.focus()
+    })
+    // 검색창 요소 내부 실제 input 요소에 포커스되면 실행.
+    searchInputEl.addEventListener('focus', function () {
+      searchEl.classList.add('focused')
+      searchInputEl.setAttribute('placeholder', '통합검색')
+    })
+    // 검색창 요소 내부 실제 input 요소에서 포커스가 해제(블러)되면 실행.
+    searchInputEl.addEventListener('blur', function () {
+      searchEl.classList.remove('focused')
+      searchInputEl.setAttribute('placeholder', '')
+    })
+    on.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
